# smart-notes

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest.toml
.github/workflows/: python-app.yml
backend/: main.py
backend/app/: dependencies.py  enums.py  main.py  models.py  schemas.py  services.py
backend/app/db/: engine.py  models.py  settings.py
backend/app/routers/: entries.py
backend/models/: entry.py
backend/routers/: entries.py
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
dottie.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: dev.ps1  dev.sh
tests/: test_entry_endpoints.py
tests/integration/: test_entry_endpoints.py
