[project]
name = "dottie"
version = "0.1.0"
dependencies = [
    'pydantic_settings',
    'sqlalchemy',
    'fastapi',
    'httpx',
    'pydantic',
    'pytest_asyncio',
    'pytest',
    'pytest-cov',
    'asgi_lifespan'
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
plugins = ["pydantic.mypy"]
